[gd_scene load_steps=2 format=2]

[ext_resource path="res://TowerRelated/Modules/RangeModule.gd" type="Script" id=1]

[node name="RangeModule" type="Area2D"]
collision_layer = 2
collision_mask = 96
script = ExtResource( 1 )

[node name="RangeShape" type="CollisionShape2D" parent="."]
[connection signal="area_shape_entered" from="." to="." method="_on_Range_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Range_area_shape_exited"]
